brain/sources/prod-metadata/objects/Zoom_Recording_Department__c/Zoom_Recording_Department__c.object-meta.xml
<CustomObject>
    <label>Zoom Recording Department</label>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Recording Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>