brain/sources/prod-metadata/objects/Zoom_Recording_Department__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <label>Department Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>