brain/sources/prod-metadata/objects/Zoom_Recording_Department__c/fields/Folder_Path_S3__c.field-meta.xml
<CustomField>
    <fullName>Folder_Path_S3__c</fullName>
    <label>Folder Path (S3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>