brain/sources/prod-metadata/objects/Zoom_Recording_Department__c/fields/Permission_Set_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_API_Name__c</fullName>
    <label>Permission Set API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>